2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (ps_page_count): remove make_ps_images().
	(ps_page_count): remove mkdir_p
	(system): remove cleanup_temp.
	(exit): remove lilypond_version_(check)
	(error_log): remove pseudo_filter_p
	remove read_pipe
	remove cp_to_dir

	* scripts/lilypond-book.py (Lilypond_snippet.compose_ly): don't
	use __main__

	* lily/accidental-engraver.cc (make_standard_accidental): only add
	support for side-axis is X_AXIS. Fixes text-spacing-accidental.ly

	* mf/GNUmakefile ($(outdir)/emmentaler-%.otf
	$(outdir)/emmentaler-%.svg): rewrite without functions; too many
	Make incompatibilities.

	* scm/output-ps.scm (grob-cause): replace backslashes by /
	(glyph-string): use ~$ for less decimals for glyph-string and grob-cause.

2006-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/GNUmakefile: Install fixes.

	* scripts/GNUmakefile (SEXECUTABLES): Install fix: remove mup2ly.

	* lily/note-head.cc (head::get_balltype): Compile fix.

	* flower/file-name.cc (dos_to_posix): Flower string fix.

2006-03-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py: pychecker cleanups.

	* scripts/lilypond-book.py
	(Lilypond_snippet.output_print_filename): pychecker cleanups

	* scripts/midi2ly.py (Key.dump): pychecker cleanups.

	* python/lilylib.py (underscore): remove identify() , warranty()

	* ps/music-drawing-routines.ps: change Border routine for GSView
	compatibility.

	* lily/stem.cc (height): use quantize-positions.  This triggers
	set_stem_lengths, so scripts on beamed stems are handled correctly.

	* lily/side-position-interface.cc (aligned_side): check if edges
	of script are inside staff. Fixes accent of edge of the staff.

	* input/regression/staccato-pos.ly: more examples.

	* stepmake/aclocal.m4 (depth): fix bashism.

	* lily/lyric-combine-music-iterator.cc: move from
	new-lyric-combine-iterator.cc
	(process): add pending_grace_lyric_ member to delay lyrics on
	grace notes.
